--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Zen Kurenaido', sans-serif;
 }
 
 
 /*-------------------------Menu----------------------------------------------------------*/
+
 .contact-info{
     float: left;
     position: fixed;
@@ -18,59 +18,58 @@
     z-index: 99999;
     left: 0;
     text-align: center;
-  }
+}
 
-  .option{
+.option{
     cursor: pointer;
     position: relative;
-    background: #4b4f25 ;
+    background: #55aa2d ;
     border-radius: 0 50px 50px 0;
     padding: 5px;
-  }
+}
 
-  .option a{
+.option a{
     text-decoration: none;
     color: #ffffff;
-  }
+}
 
-  .option i{
+.option i{
     display: block;
     width: 51px;
     height: 51px;
     line-height: 51px;
     background: #ffffff;
-    color:  #4b4f25 ;
+    color:  #55aa2d ;
     font-size: 20px;
     transition: 0.8s;
     border-radius: 50%;
-  }
+}
 
-  .option i:hover{
+.option i:hover{
     background: #ffffff;
-    color:  #4b4f25 ;
-    transform: rotateY(360deg);
-  }
+    color:  #6bbe1d ;
+}
 
-  .text{
+.text{
     position: absolute;
     height: 60px;
     width: 250px;
-    background: linear-gradient(to right, #4b4f25 , #717f38 );
+    background: linear-gradient(to right, #55aa2d , #badbaa );
     border-radius: 0 50px 50px 0;
     top: 0;
     z-index: -1;
     left: -290px;
     line-height: 60px;
     transition: 0.6s;
-  }
+}
 
-  .option:hover .text{
+.option:hover .text{
     left: 35px;
-    background:  #4b4f25 ;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4b4f25 , #717f38  );  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4b4f25 , #717f38 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background:  #55aa2d ;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #55aa2d , #badbaa  );  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #55aa2d , #badbaa ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-  }
 /*---------------------------------Header----------------------------------------------------------*/
 
 header{
@@ -110,7 +109,6 @@ header{
     position: absolute;
     bottom: -6px;
     overflow: hidden;
- 
 }
 
 #container svg{
@@ -137,6 +135,11 @@ header{
     height: 100%;
 }
 
+.contenedor{
+    width: 100%;
+    height: 100%;
+}
+
 .sobre{
     text-align: center;
     margin-top: 4%;
@@ -145,29 +148,67 @@ header{
 }
 
 .dibulla{
-    position: relative;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 15%;
+    margin-right: 15%;
     font-size: 30px;
     margin-top: 4%;
     margin-bottom: 4%;
+    text-align: justify;
 }
 
-.img-dibulla{
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+.dibulla img{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 3%;
+    opacity: 0;
+    transition: .7s ease-in-out all;
 }
 
+.dibulla img.izquierda{
+    transform: translateX(-100px);
+}
+
+.dibulla img.derecha{
+    transform: translateX(100px);
+}
+
+.dibulla img.visible{
+    opacity: 1;
+    transform: translateX(0);
+}
 
 /*-----------------------------------------footer-----------------------------------------------------------*/
+
+.wave{
+    width: 100%;
+    bottom: -6px;
+    overflow: hidden;
+    margin-bottom: -0.8%;
+}
+
+.wave svg{
+    width: 200%;
+    position: relative;
+    animation: move-left 5s linear infinite;
+}
+
+@keyframes move-left{
+    0%{
+        left: 0%;
+    }
+    100%{
+        left: -100%;
+    }
+    
+}
+
 
 .fin{
     width: 100%;
     padding: 2rem 8%;
     display: flex;
-    background-color: #717f38;
+    background-color: #55aa2d;
 }
 
 .fin-dibulla{
@@ -226,42 +267,47 @@ header{
 }
 
 
+
 /*------------------------------------responsive------------------------------------------------------*/
 
 @media screen and (max-width: 800px){
 
-    .nav_label{
-        display: block;
-        cursor: pointer;
+
+    .option i{
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 15px;
     }
 
-    .nav_menu{
-        position: absolute;
-        top: 79px;
-        bottom: 0;
-        background: #717f38;
-        width: 100%;
-        left: 0;
-        z-index: 1;
-        display: flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-items: center;
-        clip-path: circle(0 at center);
+
+    .text{
+        height: 50px;
+        line-height: 50px;
+        width: 230px;
     }
 
-    .nav_input:checked ~ .nav_menu{
-        clip-path: circle(100% at center);
+    .option:hover .text{
+        left: 30px;
     }
 
     .titulo h1{
         font-size: 70px;
     }
 
+    
+    #container{
+        margin-bottom: 1%;
+    }
+    
     .sobre h1{
         font-size: 40px;
     }
 
+    .dibulla{
+        margin-left: 19%;
+        margin-right: 19%;
+    }
 
     .dibulla p{
         font-size: 20px;
@@ -314,4 +360,19 @@ header{
 }
 
 }
+
+@media screen and (max-width: 600px){
+
+    .wave{
+        margin-bottom: -1.6%;
+    }
+
+}
+
+@media screen and (max-width: 300px){
+    .wave{
+        margin-bottom: -1.9%;
+    }
+}
+
 
