--- a/css/historia.css
+++ b/css/historia.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,300,700");
-
 
 *{
     margin: 0%;
@@ -8,10 +6,11 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Zen Kurenaido', sans-serif;
 }
 
+
 /*-------------------------Menu----------------------------------------------------------*/
+
 .contact-info{
     float: left;
     position: fixed;
@@ -19,59 +18,59 @@
     z-index: 99999;
     left: 0;
     text-align: center;
-  }
+}
 
-  .option{
+.option{
     cursor: pointer;
     position: relative;
-    background: #4b4f25 ;
+    background: #55aa2d ;
     border-radius: 0 50px 50px 0;
     padding: 5px;
-  }
+}
 
-  .option a{
+.option a{
     text-decoration: none;
     color: #ffffff;
-  }
+}
 
-  .option i{
+.option i{
     display: block;
     width: 51px;
     height: 51px;
     line-height: 51px;
     background: #ffffff;
-    color:  #4b4f25 ;
+    color:  #55aa2d ;
     font-size: 20px;
     transition: 0.8s;
     border-radius: 50%;
-  }
+}
 
-  .option i:hover{
+.option i:hover{
     background: #ffffff;
-    color:  #4b4f25 ;
-    transform: rotateY(360deg);
-  }
+    color:  #6bbe1d ;
+}
 
-  .text{
+.text{
     position: absolute;
     height: 60px;
     width: 250px;
-    background: linear-gradient(to right, #4b4f25 , #717f38 );
+    background: linear-gradient(to right, #55aa2d , #badbaa );
     border-radius: 0 50px 50px 0;
     top: 0;
     z-index: -1;
     left: -290px;
     line-height: 60px;
     transition: 0.6s;
-  }
+}
 
-  .option:hover .text{
+.option:hover .text{
     left: 35px;
-    background:  #4b4f25 ;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4b4f25 , #717f38  );  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4b4f25 , #717f38 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background:  #55aa2d ;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #55aa2d , #badbaa  );  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #55aa2d , #badbaa ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-  }
+/*---------------------------------Header----------------------------------------------------------*/
 
 header{
     position: relative;
@@ -82,8 +81,18 @@ header{
     align-items: center;
 }
 
+.portada{
+    width: 100%;
+    height: 100%;
+}
+
+.img-portada{
+    width: 100%;
+    height: 100%;
+}
+
 .titulo{
-    font-size: 50px;
+    font-size: 90px;
     position: absolute;
     color: white;
     text-align: center;
@@ -91,14 +100,35 @@ header{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 70%;
+    height: 85%;
 }
 
 
-.img-portada{
+#container{
     width: 100%;
-    height: 600px;
+    position: absolute;
+    bottom: -6px;
+    overflow: hidden;
 }
+
+#container svg{
+    width: 200%;
+    position: relative;
+    animation: move-left 5s linear infinite;
+    
+}
+
+@keyframes move-left{
+    0%{
+        left: 0%;
+    }
+    100%{
+        left: -100%;
+    }
+    
+}
+
+/*-------------------------------------section----------------------------------------------------------------*/
 
 .catalago{
     width: 100%;
@@ -125,24 +155,20 @@ header{
 .historiad p{
     font-family: 'Lucida Sans';
 }
-.portada{
-    width: 100%;
-    height: 50%;
-}
 
-#container{
+/*-----------------------------------------footer-----------------------------------------------------------*/
+
+.wave{
     width: 100%;
-    position: absolute;
     bottom: -6px;
     overflow: hidden;
- 
+    margin-bottom: -0.8%;
 }
 
-#container svg{
+.wave svg{
     width: 200%;
     position: relative;
     animation: move-left 5s linear infinite;
-    
 }
 
 @keyframes move-left{
@@ -156,138 +182,175 @@ header{
 }
 
 
-.footer-distributed {
-    background-color: #717f38;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
+.fin{
     width: 100%;
-    text-align: left;
-    font: normal 16px sans-serif;
-    padding: 45px 50px;
-    }
+    padding: 2rem 8%;
+    display: flex;
+    background-color: #55aa2d;
+}
 
-    .footer-distributed .footer-left p {
-    color: #000000;
-    font-size: 14px;
-    margin: 0;
-    }
-  /* Footer links */
-
-    .footer-distributed p.footer-links {
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    margin: 0 0 10px;
-    padding: 0;
-    transition: ease .25s;
-    }
-
-    .footer-distributed p.footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color: inherit;
-    transition: ease .25s;
-    }
-
-    .footer-distributed .footer-links a:before {
-    content: "·";
-    font-size: 20px;
-    left: 0;
-    color: white;
-    display: inline-block;
-    padding-right: 5px;
-    }
-
-    .footer-distributed .footer-links .link-1:before {
-    content: none;
-    }
-
-    .footer-distributed .footer-right {
-    float: right;
-    margin-top: 6px;
-    max-width: 180px;
-    }
-
-    .footer-distributed .footer-right a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    background-color: #717f38;
-    border-radius: 2px;
-    font-size: 20px;
-    color: white;
+.fin-dibulla{
+    width: 25%;
     text-align: center;
-    line-height: 35px;
-    margin-left: 3px;
-    transition:all .25s;
+    font-size: 20px;
+    margin-top: 1%;
+}
+
+.explorar{
+    width: 10%;
+    text-align: center;
+    font-size: 15px;
+}
+
+.explorar a{
+    color: black;
+}
+
+.contenedor-logos{
+    width: 60%;
+    text-align: center;
+}
+
+
+.logos{
+    color: aliceblue;
+    margin-left: 1%;
+    font-size: 15px;
+}
+
+.logos i{
+    font-size: 20px;
+    margin-right: 1%;
+}
+
+.contacto{
+    margin-top: 1%;
+}
+
+.contacto a{
+    color: white;
+    font-size: 15px;
+    margin-top: 4%;
+}
+
+.contacto h3{
+    font-size: 20px;
+    margin-bottom: 1%;
+}
+
+.contacto i{
+    margin-right: 1%;
+    font-size: 20px;
+    margin-left: 1%;
+}
+
+
+
+/*------------------------------------responsive------------------------------------------------------*/
+
+@media screen and (max-width: 800px){
+
+
+    .option i{
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 15px;
     }
 
-    .footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
 
-    .footer-distributed p.footer-links a:hover{text-decoration:underline;}
-
-@media (max-width: 850px){
-
-    .nav_label{
-        display: block;
-        cursor: pointer;
+    .text{
+        height: 50px;
+        line-height: 50px;
+        width: 230px;
     }
 
-    .nav_menu{
-        position: absolute;
-        top: 80px;
-        bottom: 0;
-        background: #717f38;
-        width: 100%;
-        left: 0;
-        z-index: 1;
-        display: flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-items: center;
-        clip-path: circle(0 at center);
-    }
-
-    .nav_input:checked ~ .nav_menu{
-        clip-path: circle(100% at center);
+    .option:hover .text{
+        left: 30px;
     }
 
     .titulo h1{
         font-size: 70px;
-        font-family: 'Lucida Sans';
     }
 
+    
+    #container{
+        margin-bottom: 1%;
+    }
+    
     .sobre h1{
         font-size: 40px;
-        font-family: 'Lucida Sans';
-    } 
-
-    .sobre h2{
-        font-size: 40px;
-        font-family: 'Lucida Sans';
     }
 
-    .historiad p{
+    .dibulla{
+        margin-left: 19%;
+        margin-right: 19%;
+    }
+
+    .dibulla p{
         font-size: 20px;
-        font-family: 'Lucida Sans';
-    }
-    .wave{
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        color: white;
-        bottom: 5px;
     }
 
-    .footer-distributed .footer-left, .footer-distributed .footer-right {
-        text-align: center;
+    .fin-dibulla h1{
+        font-size: 25px;
+        margin-top: 30%;
     }
-    .footer-distributed .footer-right {
-        float: none;
-        margin: 0 auto 20px;
+
+    .explorar h3{
+        font-size: 20px;
     }
-    .footer-distributed .footer-left p.footer-links {
-        line-height: 1.8;
+
+    .explorar{
+        font-size: 15px;
+        margin-left: 12%;
+    }
+
+    .contenedor-logos{
+        margin-left: 20%;
+    }
+
+    .logos{
+        font-size: 0px;
+    }
+
+    .logos i{
+        font-size: 20px;
+    }
+
+    .contacto{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contacto h3{
+        font-size: 15px;
+    }
+
+    .contacto i{
+        font-size: 10px;
+        margin-right: 0%;
+        margin-left: 0%;
+    }
+
+    .contacto a{
+        font-size: 10px;
+        margin-top: 6%;
+}
+
+}
+
+@media screen and (max-width: 600px){
+
+    .wave{
+        margin-bottom: -1.6%;
+    }
+
+}
+
+@media screen and (max-width: 300px){
+    .wave{
+        margin-bottom: -1.9%;
     }
 }
+
+
