--- a/css/contacto.css
+++ b/css/contacto.css
@@ -6,10 +6,11 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Zen Kurenaido', sans-serif;
 }
 
+
 /*-------------------------Menu----------------------------------------------------------*/
+
 .contact-info{
     float: left;
     position: fixed;
@@ -17,59 +18,60 @@
     z-index: 99999;
     left: 0;
     text-align: center;
-  }
+}
 
-  .option{
+.option{
     cursor: pointer;
     position: relative;
-    background: #4b4f25 ;
+    background: #55aa2d ;
     border-radius: 0 50px 50px 0;
     padding: 5px;
-  }
+}
 
-  .option a{
+.option a{
     text-decoration: none;
     color: #ffffff;
-  }
+}
 
-  .option i{
+.option i{
     display: block;
     width: 51px;
     height: 51px;
     line-height: 51px;
     background: #ffffff;
-    color:  #4b4f25 ;
+    color:  #55aa2d ;
     font-size: 20px;
     transition: 0.8s;
     border-radius: 50%;
-  }
+}
 
-  .option i:hover{
+.option i:hover{
     background: #ffffff;
-    color:  #4b4f25 ;
-    transform: rotateY(360deg);
-  }
+    color:  #6bbe1d ;
+}
 
-  .text{
+.text{
     position: absolute;
     height: 60px;
     width: 250px;
-    background: linear-gradient(to right, #4b4f25 , #717f38 );
+    background: linear-gradient(to right, #55aa2d , #badbaa );
     border-radius: 0 50px 50px 0;
     top: 0;
     z-index: -1;
     left: -290px;
     line-height: 60px;
     transition: 0.6s;
-  }
+}
 
-  .option:hover .text{
+.option:hover .text{
     left: 35px;
-    background:  #4b4f25 ;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4b4f25 , #717f38  );  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4b4f25 , #717f38 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background:  #55aa2d ;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #55aa2d , #badbaa  );  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #55aa2d , #badbaa ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-  }
+/*---------------------------------Header----------------------------------------------------------*/
+
 header{
     position: relative;
     text-align: center;
@@ -77,6 +79,16 @@ header{
     height: 100%;
     justify-content: center;
     align-items: center;
+}
+
+.portada{
+    width: 100%;
+    height: 100%;
+}
+
+.img-portada{
+    width: 100%;
+    height: 100%;
 }
 
 .titulo{
@@ -92,49 +104,11 @@ header{
     height: 85%;
 }
 
-.img-portada{
-    width: 100%;
-    height: 100%;
-}
-
-.catalago{
-    width: 100%;
-    height: 100%;
-}
-
-.sobre{
-    text-align: center;
-    margin-top: 4%;
-    font-size: 60px;
-    margin-bottom: 4%;
-}
-
-.dibulla{
-    margin-left: 10%;
-    margin-right: 10%;
-    font-size: 30px;
-}
-
-.portada{
-    width: 100%;
-    height: 600px;
-}
-
-.img-dibulla{
-    width: 80%;
-    height: 50%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 4%;
-
-}
-
 #container{
     width: 100%;
     position: absolute;
     bottom: -6px;
     overflow: hidden;
- 
 }
 
 #container svg{
@@ -153,6 +127,9 @@ header{
     }
     
 }
+
+/*-------------------------------------section----------------------------------------------------------------*/
+
 
 .mapa{
     object-fit: cover;
@@ -201,106 +178,201 @@ label{
     border: none;
 }
 
-footer{    
-    -webkit-text-stroke-color: white;
-    -webkit-text-stroke-width: 0.16px;
-    padding: 50px;
-    background-color: #717f38;}
+/*-----------------------------------------footer-----------------------------------------------------------*/
 
-.contenedorfooter{
+.wave{
+    width: 100%;
+    bottom: -6px;
+    overflow: hidden;
+    margin-bottom: -0.8%;
+}
+
+.wave svg{
+    width: 200%;
+    position: relative;
+    animation: move-left 5s linear infinite;
+}
+
+@keyframes move-left{
+    0%{
+        left: 0%;
+    }
+    100%{
+        left: -100%;
+    }
+    
+}
+
+
+.fin{
+    width: 100%;
+    padding: 2rem 8%;
     display: flex;
-    justify-content: center;
-    align-items: center;}
+    background-color: #55aa2d;
+}
 
-.colun1{
-    margin-left: 100px;}
+.fin-dibulla{
+    width: 25%;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 1%;
+}
 
-.colun1 h4{
-    font-size: 20px;}
+.explorar{
+    width: 10%;
+    text-align: center;
+    font-size: 15px;
+}
 
-.cont1{
-    margin-top: 25px;
-    display: flex;}
+.explorar a{
+    color: black;
+}
 
-.cont1 img{
-    width: 40px;
-    height: 40px;}
+.contenedor-logos{
+    width: 60%;
+    text-align: center;
+}
 
+
+.logos{
+    color: aliceblue;
+    margin-left: 1%;
+    font-size: 15px;
+}
+
+.logos i{
+    font-size: 20px;
+    margin-right: 1%;
+}
+
+.contacto{
+    margin-top: 1%;
+}
+
+.contacto a{
+    color: white;
+    font-size: 15px;
+    margin-top: 4%;
+}
+
+.contacto h3{
+    font-size: 20px;
+    margin-bottom: 1%;
+}
+
+.contacto i{
+    margin-right: 1%;
+    font-size: 20px;
+    margin-left: 1%;
+}
+
+
+
+/*------------------------------------responsive------------------------------------------------------*/
 
 @media screen and (max-width: 800px){
 
-    .nav_label{
-        display: block;
-        cursor: pointer;
+
+    .option i{
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 15px;
     }
 
-    .nav_menu{
-        position: absolute;
-        top: 80px;
-        bottom: 0;
-        background: rgb(8, 209, 245);
-        width: 100%;
-        left: 0;
-        z-index: 1;
-        display: flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-items: center;
-        clip-path: circle(0 at center);
+
+    .text{
+        height: 50px;
+        line-height: 50px;
+        width: 230px;
     }
 
-    .nav_input:checked ~ .nav_menu{
-        clip-path: circle(100% at center);
+    .option:hover .text{
+        left: 30px;
     }
 
     .titulo h1{
         font-size: 70px;
     }
 
+    
+    #container{
+        margin-bottom: 1%;
+    }
+    
     .sobre h1{
         font-size: 40px;
+    }
+
+    .dibulla{
+        margin-left: 19%;
+        margin-right: 19%;
     }
 
     .dibulla p{
         font-size: 20px;
     }
 
-    .contactos{
-        width: 300px;
-        margin-right: 10px;
-        padding: 20px;
-        background-color: #c8d3af;
-        border-radius: 15px;
-        border: 1px solid rgb(230, 230, 230);
-        box-shadow: #a3af86 2px 2px 1px;
-    }
-    
-    .cont-contact{
-        font-size: 20px;
-        color: #293015;
-    }
-    
-    .formu{
-        width: 300px;
-        padding: 20px;
-        background-color: #c8d3af;
-        border-radius: 15px;
-        border: 1px solid rgb(230, 230, 230);
-        box-shadow: #a3af86 4px 4px 1px;
-    }
-    
-    label{
-        color: #293015;
-        margin-left: 20px;
+    .fin-dibulla h1{
+        font-size: 25px;
+        margin-top: 30%;
     }
 
-    .cuadros{
-        height: 16px;
-        width: 260px;
-        box-shadow: #727a5db9 2px 2px 4px;
-        background-color: #9ead79bb;
-        border-radius: 15px;
-        border: none;
+    .explorar h3{
+        font-size: 20px;
+    }
+
+    .explorar{
+        font-size: 15px;
+        margin-left: 12%;
+    }
+
+    .contenedor-logos{
+        margin-left: 20%;
+    }
+
+    .logos{
+        font-size: 0px;
+    }
+
+    .logos i{
+        font-size: 20px;
+    }
+
+    .contacto{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contacto h3{
+        font-size: 15px;
+    }
+
+    .contacto i{
+        font-size: 10px;
+        margin-right: 0%;
+        margin-left: 0%;
+    }
+
+    .contacto a{
+        font-size: 10px;
+        margin-top: 6%;
+}
+
+}
+
+@media screen and (max-width: 600px){
+
+    .wave{
+        margin-bottom: -1.6%;
     }
 
 }
+
+@media screen and (max-width: 300px){
+    .wave{
+        margin-bottom: -1.9%;
+    }
+}
+
+
