--- a/css/historia.css
+++ b/css/historia.css
@@ -8,7 +8,11 @@
     list-style: none;
 }
 
-/*-------------------------------------section----------------------------------------------------------------*/
+.portada{
+heigth: 500px !important;
+}
+
+/*-------------------------------------content--------------------------------------------------------------*/
 
 .catalago{
     width: 100%;
