--- a/css/historia.css
+++ b/css/historia.css
@@ -9,7 +9,7 @@
 }
 
 .portada{
-heigth: 500px !important;
+height: 500px !important;
 }
 
 /*-------------------------------------content--------------------------------------------------------------*/
