--- a/css/inicio.css
+++ b/css/inicio.css
@@ -45,50 +45,75 @@
 }
 /*-------------------------------------section----------------------------------------------------------------*/
 
-.catalago{
+.catalogo2{
+    width: 80%;
+    height: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.container_catalogo{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
-.contenedor{
-    width: 100%;
+
+.text_catalogo{
+    width: 50%;
     height: 100%;
+    font-size: 20px;
 }
 
-.sobre{
-    text-align: center;
-    margin-top: 4%;
-    font-size: 60px;
-    margin-bottom: 4%;
-}
-
-.dibulla{
-    margin-left: 15%;
-    margin-right: 15%;
-    font-size: 30px;
-    margin-top: 4%;
-    margin-bottom: 4%;
-    text-align: justify;
-}
-
-.dibulla img{
-    width: 90%;
+.catalogo_img{
+    width: 40%;
+    height: 100%;
     margin-left: 5%;
+    height: 100%;
+}
+
+.img_right{
+    width: 40%;
     margin-right: 5%;
-    margin-top: 3%;
+    height: 100%;
+}
+
+.catalogo_img img{
+    width: 100%;
+    height: 100%;
     opacity: 0;
     transition: .7s ease-in-out all;
 }
 
-.dibulla img.izquierda{
+.img_right img{
+    width: 100%;
+    opacity: 0;
+    transition: .7s ease-in-out all;
+}
+
+
+
+.catalogo_img img.izquierda{
     transform: translateX(-100px);
 }
 
-.dibulla img.derecha{
+.img_right img.derecha{
     transform: translateX(100px);
 }
 
-.dibulla img.visible{
+.catalogo_img img.visible{
     opacity: 1;
     transform: translateX(0);
 }
+
+.img_right img.visible{
+    opacity: 1;
+    transform: translateX(0);
+}
+
