--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Poppins:wght@100&display=swap');
 
 *{
     margin: 0%;
@@ -69,6 +69,8 @@
     width: 50%;
     height: 100%;
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
 .catalogo_img{
