--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ header{
 
 .portada{
     width: 100%;
-    height: 750px;
+    height: 100%;
 }
 
 .img-portada{
@@ -278,13 +278,10 @@ footer{
         font-size: 120px;
     }
 
-    .portada{
-        margin-bottom: 100px;
-        height: 500px;
-    }
+    
     
     #container{
-        bottom: -13px;
+        margin-bottom: 0.8%;
     }
     
     .container_catalogo{
@@ -331,13 +328,10 @@ footer{
         font-size: 90px;
     }
 
-    .portada{
-        margin-bottom: 75px;
-        height: 300px;
-    }
+   
 
     #container{
-        bottom: -40px;
+            margin-bottom: 1.5%;
     }
 
     .wave{
@@ -351,13 +345,13 @@ footer{
         display: none;
     }
 
-    .portada{
-        margin-bottom: 60px
-    }
+    
 
     #container{
-        bottom: -5px;
+        margin-bottom: 2%;
     }
+    
+    
     .wave{
         margin-bottom: -1.9%;
     }
